cleanup build.gradle